[package]
name        = "overdrive-core"
version     = "0.0.0"
description = "Overdrive core types: newtypes, errors, injectable trait boundaries."
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
publish.workspace       = true

[package.metadata.overdrive]
crate_class = "core"

[lints]
workspace = true

[dependencies]
# Errors & serialization
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
rkyv.workspace       = true
bytecheck.workspace  = true

# OpenAPI schema derivation — `JobSpecInput` carries `ToSchema` so
# `overdrive-control-plane::api` can reuse it as the typed spec field in
# `SubmitJobRequest` / `JobDescription` per ADR-0014 (shared types
# between server and CLI) and ADR-0009 (utoipa-derived OpenAPI). utoipa
# is not on the dst-lint banned-API list — it is a declarative
# macro-derive crate with no runtime I/O.
utoipa.workspace = true

# Identifiers
sha2.workspace = true
hex.workspace  = true
time.workspace = true
uuid.workspace = true

# Content hashing for `BackendSetFingerprint`
# (`crate::dataplane::fingerprint::fingerprint`). blake3 is the
# canonical project choice for content-addressed hashes computed
# over deterministic byte serializations per
# `.claude/rules/development.md` § Hashing requires deterministic
# serialization. Already declared in the workspace
# (`Cargo.toml` line 74).
blake3.workspace = true

# Trait boundaries — async, I/O types, streams.
async-trait.workspace = true
futures.workspace     = true
bytes.workspace       = true
tokio.workspace       = true

# Structured tracing for the typed Job persistence-boundary codec
# (`aggregate::JobV1::from_store_bytes` emits
# `health.startup.refused` on envelope decode failure per ADR-0048 §
# 3 intent-fail-fast policy + § 6 operator remediation). `tracing` is
# a pure-Rust facade (no runtime I/O) and is NOT on the dst-lint
# banned-API list.
tracing.workspace = true

# TOML deserialisation for the `WorkloadSpecInput::from_toml_str`
# parser surface (Slice 01 of `workload-kind-discriminator`, ADR-0047
# §2). The parser is the single driving port for kind discrimination —
# every consumer routes through here. `toml` is a pure-Rust string
# parser and is NOT on the dst-lint banned-API list.
toml.workspace = true

[features]
# `test-utils` — TEST-ONLY feature. Exposes
# `overdrive_core::testing::observation_store::run_lww_conformance`, the
# trait-generic LWW conformance harness exercised by every
# `ObservationStore` adapter's test suite. Per
# `docs/feature/fix-observation-lww-merge/deliver/rca.md` Cause C, the
# comparator MUST live in `overdrive-core` so both adapters call the
# same primitive; the conformance harness MUST be reachable from each
# adapter's `dev-dependencies` to enforce the trait-level invariant.
# Production builds MUST NEVER enable this feature.
test-utils = []

# `integration-tests` — workspace-wide convention. Every workspace
# member declares this feature so `cargo {check,test,mutants}
# --features integration-tests` resolves uniformly under per-package
# scoping (cargo refuses the bare feature on packages that do not
# declare it, which breaks mutation testing's per-mutant invocations).
# This crate has no integration-shaped tests of its own — the
# declaration is a deliberate no-op. See `.claude/rules/testing.md`
# §"Integration vs unit gating".
integration-tests = []

[dev-dependencies]
# Self dev-dep enabling `test-utils` so this crate's OWN integration
# tests under `tests/` (a separate compilation that does not inherit the
# lib's `cfg(test)`) can reach the `#[cfg(feature = "test-utils")]`
# `overdrive_core::testing` module. Step 01-03 promoted the shared
# `ProvisionRecord` workflow fixture into `testing::workflow`, which
# `tests/acceptance/workflow_trait_drives_to_terminal.rs` now imports;
# without this feature the integration test sees `testing` gated out.
# Production builds NEVER enable `test-utils` (see [features] above).
overdrive-core = { path = ".", features = ["test-utils"] }
proptest.workspace = true
rstest.workspace   = true
# Static scan of `src/**/*.rs` for the §2.3 API-shape invariant. Used only
# by `tests/public_api_shape.rs` — never referenced from production code.
syn.workspace      = true
# Type-level separation between `IntentStore` and `ObservationStore`
# (US-03 §4.4 / US-04) is a compile-time property. `trybuild` drives
# `tests/compile_fail/*.rs` fixtures and asserts each produces the
# expected compiler diagnostic. ADR-0001 row 24 approves this dev-dep.
trybuild.workspace = true
# `tests/acceptance/unix_instant_arithmetic.rs` exercises
# `UnixInstant::from_clock` against the project's standard `Clock`
# fixture (`SimClock`). Dev-dep only — `overdrive-sim` itself depends
# on `overdrive-core`, which Cargo permits in dev-deps because dev-deps
# do not propagate to downstream consumers.
overdrive-sim.path = "../overdrive-sim"
tokio              = { workspace = true }
# `tests/backend_discovery_bridge_types.rs` round-trips
# `BackendDiscoveryBridgeView` through the same CBOR codec the
# runtime-owned `ViewStore` uses (per ADR-0035 § 3 — CBOR via
# `ciborium`). Dev-dep only — production runtime persistence lives
# in `overdrive-control-plane`, which carries the regular dep.
ciborium           = { workspace = true }
# `toml` is now a regular dep — see [dependencies] above for the
# Slice 01 / ADR-0047 §2 rationale. Tests inherit the regular dep,
# so a separate dev-dep entry would be a duplicate.
