# `overdrive-dataplane` — userspace BPF loader per ADR-0038.
#
# Owns the `EbpfDataplane` impl of the `Dataplane` port trait from
# `overdrive-core`. The kernel object produced by `overdrive-bpf` is
# embedded at compile time via `include_bytes!` (architecture.md §3.3),
# attached to the host via aya-rs userspace API.
#
# Class `adapter-host` per ADR-0003 — same class as `overdrive-host`,
# `overdrive-store-local`, `overdrive-worker`. dst-lint scans only
# `core`-class crates and skips this one.
#
# Phase 2.1 step 01-02 ships the loader skeleton. The three
# `Dataplane` trait methods are stubbed (`Ok(())` / `Ok(vec![])`)
# with `/// see #N` doc anchors per architecture.md §7.

[package]
name         = "overdrive-dataplane"
version      = "0.0.0"
description  = "Userspace BPF loader: EbpfDataplane impl of the Dataplane port."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish                = false

# Tooling binaries live under `bin/` (not `src/bin/`) per
# `.claude/rules/development.md` § "src/ is production code".
[[bin]]
name = "verifier_regress"
path = "bin/verifier_regress.rs"

[[bin]]
name = "xdp_perf"
path = "bin/xdp_perf.rs"

[package.metadata.overdrive]
crate_class = "adapter-host"

[features]
# Workspace-wide convention. Every member declares this feature so
# `cargo {check,test,mutants} --features integration-tests` resolves
# uniformly under per-package scoping. Phase 2 Tier 3 smoke for
# `EbpfDataplane` lives in `cargo xtask integration-test vm` (step
# 03-02), not in this crate's `tests/` directory — the `tests/
# integration.rs` entrypoint is the gate per `.claude/rules/testing.md`
# § Layout convention. See `.claude/rules/testing.md` § Workspace
# convention.
integration-tests = []

[dependencies]
overdrive-core.workspace = true
async-trait.workspace    = true
thiserror.workspace      = true
tokio                    = { workspace = true, features = ["macros", "rt"] }
tracing.workspace        = true

# Binary-only at the `verifier_regress` and `xdp_perf` boundaries
# per `.claude/rules/development.md` § Errors ("eyre only at CLI /
# binary boundaries"). The library modules use `thiserror`-typed
# errors; `verifier_budget` and `xdp_perf_gate` do not depend on
# these. `clap` powers the `xdp_perf` binary's CLI args.
eyre.workspace       = true
color-eyre.workspace = true
clap.workspace       = true

# `parking_lot::Mutex` for interior mutability of aya's
# `HashMap`-backed `BACKEND_MAP` handle — `Dataplane::update_service`
# is `&self` per the trait surface, but aya's `HashMap::insert /
# remove` take `&mut self`. The lock is held only for the duration
# of the BPF syscalls — never across `.await` (per
# `.claude/rules/development.md` § Concurrency).
parking_lot.workspace = true

aya.workspace  = true
libc.workspace = true
nix.workspace  = true

# `ipnet` — IPv4 CIDR + reserved-set types for the `allocators::VipRange`
# allocator surface (ADR-0049 / step 01-01). Pure-Rust, no I/O.
ipnet.workspace = true

# Integration-test dev-deps. `serial_test` serialises tests that
# mutate process-global state — here, the on-disk BPF artifact path
# under `target/bpf/`. See `.claude/rules/testing.md`
# § "Tests that mutate process-global state".
#
# `tracing-subscriber` is dev-only — used by S-2.2-02 to capture the
# `xdp.attach.fallback_generic` structured warn event via a custom
# `tracing::Layer` (production code does NOT install a subscriber).
# `proptest` powers the userspace endianness round-trip in
# `crates/overdrive-dataplane/src/maps/service_map_handle.rs` per
# Phase 2.2 step 02-02 (S-2.2-04 handle endianness). Pure-function
# unit-level test, runs in the default lane.
[dev-dependencies]
proptest.workspace           = true
serial_test.workspace        = true
tracing-subscriber.workspace = true

serde_json.workspace = true

[lints]
workspace = true
